# haskell-auditing-tool

./: .gitignore  Main.hs  README.md  cabal.project  commands.md  flake.nix  haskell-permission-tool.cabal
default-input/: deps.sqlite
default-input/hie-files/: Main.hie
input/: Blacklist.txt
src/: Analysis.hs  Collect.hs  Core.hs  Dependency.hs  GhcSession.hs  Json.hs  Main.hs  Options.hs  Output.hs  ReadableHelper.hs  TrimGraph.hs  Types.hs
src/Graph/: Query.hs  Trim.hs
src/Plugin/: AnalysisPlugin.hs
