cabal-version: 3.6
version: 1.0.20240305.2
name:       haskell-permission-tool
synopsis:   
author:     Timo Blok
build-type: Simple

common common
  default-language: GHC2021
  hs-source-dirs:   src 
  build-depends:
      algebraic-graphs
    , base < 5
    , containers
    , optparse-applicative
    , exceptions
    , ghc
    , ghc-paths
    , ghc-prim
    , transformers
    , directory
    , split
    , aeson
    , text
    , filepath

library
  import: common 
  exposed-modules:
      Main
    , Core
    , Dependency
    , Options
    , Output
    , Json
    , Collect
    , Plugin.AnalysisPlugin


executable hpt
  import:        common
  main-is:       Main.hs
  other-modules:
    , Core
    , Dependency
    , Options
    , Output
    , Json
    , Collect
