cabal-version: 3.6
version: 1.0.20240514.6
name:       haskell-permission-tool
synopsis:   
author:     Timo Blok
build-type: Simple

common common
  default-language: GHC2021
  hs-source-dirs:   src 
  build-depends:
      algebraic-graphs
    , aeson
    , base < 5
    , containers
    , directory
    , exceptions
    , filepath
    , ghc
    , ghc-paths
    , ghc-prim
    , optparse-applicative
    , split
    , transformers
    , text

library
  import: common 
  exposed-modules:
      Core
    , Dependency
    , Graph.Query
    , Graph.Trim
    , Json
    , Main
    , Options
    , Output
    , Plugin.AnalysisPlugin
    , ReadableHelper

executable hpt
  import:        common
  main-is:       Main.hs
  other-modules:
      Core
    , Dependency
    , Graph.Trim
    , Graph.Query
    , Json
    , Options
    , Output
    , ReadableHelper
